T.o.M.E 2.3.8 (ah)

- Change "molten glass wall" to use a different internal code to
  hopefully avoid clashes with modules such as Theme.

T.o.M.E 2.3.7 (ah)

- Remove item pval from antimagic field strength calculation since it
  may be both non-zero and invisible (to the player).
- Miscellaneous 64 bit fixes.
- Fix Lua errors when hitting <ESC> while choosing spell.
- Killerbunnies: Automatizer: Add patch which adds new <inventory/>
  and <equipment/> rules.
- Killerbunnies: Add "you do not know all your fate" to Fate menu
  if you haven't been discovered all your fates.
- Killerbunnies: Display a message if trying to activate Piercing Shots
  without the necessary skill levels.

T.o.M.E 2.3.6 (ah)

- Don't generate impassable glass walls.
- Mark *all* quest monsters properly.
- Avoid generating up staircases in selected dungeons.
- Mimicry cloaks of Abomination now aggravate properly.
- Properly handle item set effects with certain traps.
- Fix crash bug during character dumps.
- Misc. Mimicry fixes.
- Prevent immunities from Balrog Form persisting too long.
- Fix for loading/saving on Linux distribution using Fortify.
- Fix for module directory paths.
- Fix miscellaneous problems on 64-bit platforms.
- Princess room should now always be generated.
- Extra Blows applies to barehand combat too.






T.o.M.E 2.3.5 aka "Into the unknown" changes

Interface changes:
- The X11 and Xaw interfaces now save the dungeon and player when the
  window is closed.
- Fixed cpu churning bug that occurs when using certain window managers and
  ToME is maximized.

Gameplay changes:
- Player speed now set correctly when Demon Hide corruption is enabled.
- ToME now correctly sets various Balrog flags when player in Balrog form.
- ToME now correctly sets the teleport flags when teleport corruption is
  enabled.
- ToME now uses the qrand7.map file when generating princess quests.
- Bigs changes for generate.c to get it to produce the princess and thrain